<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".RegisterActivity">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:padding="16dp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/registrationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/titleTextView"
            android:text="@string/register"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/default_margin"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registrationTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/default_margin"
            android:ems="14"
            android:hint="@string/username"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/usernameEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/default_margin"
            android:ems="14"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/default_margin"
            android:ems="14"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/passwordConfirmEditText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/default_margin"
            android:ems="14"
            android:hint="@string/passwordConfirm"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordConfirmEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/default_margin"
            android:ems="14"
            android:hint="@string/phone"
            android:inputType="phone" />

        <Spinner
            android:id="@+id/sexOptionsSpinner"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phoneEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/default_margin" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sexOptionsSpinner"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/default_margin"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue"
                android:ems="14"
                android:onClick="register"
                android:text="@string/register"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue"
                android:ems="14"
                android:onClick="cancel"
                android:text="@string/cancel"
                tools:ignore="OnClick" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>